--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,10 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            apply plugin: 'idea'
+            apply plugin: 'eclipse-wtp'
+            //runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
