--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.zzz711.nimbus"
+        applicationId "com.zzz711.nimbus"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -24,4 +24,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:23.4.0'
 }
